[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bharatutils"
version = "0.1.1"
description = "Python utilities for Indian developers — lakh/crore formatting, GST & PAN validation, address parsing, festival calendar"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ansuman Jaiswal"}
]
keywords = ["india", "gst", "pan", "lakh", "crore", "inr", "pincode", "address", "festivals", "indian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/iam-ansuman/bharatutils"
Issues = "https://github.com/iam-ansuman/bharatutils/issues"

[tool.setuptools]
packages = ["bharatutils"]
